finished styling, banner, hidden things to non users, song overlapping issue

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -99,7 +99,7 @@ a.join {
   width: 100%;
   height: 10em;
   color: #f2f2f2;
-  background: url('https://thumbs.dreamstime.com/z/satin-swoosh-lines-flow-blue-pink-waves-certificate-background-vector-illustration-44486283.jpg');
+  background: url('../proj3.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -318,10 +318,15 @@ li:hover {
 
 .embedded_song {
   height: 3em;
-  width: 100%;
+  /*width: 100%;*/
   font-size: 1em;
   font-family: helvetica;
   text-align: center;
+  overflow-y: scroll;
+  overflow-wrap: none;
+  white-space: nowrap;
+  padding-left: .5em;
+  box-sizing: border-box;
 }
 
 .comment_listen {
